--- a/package.json
+++ b/package.json
@@ -9,9 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "next-i18n-router": "^5.2.0",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.0.1",
+    "react-icons": "^5.0.1",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "@ant-design/icons": "^5.3.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.8.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "accept-language": "^3.0.18",
+    "antd": "^5.14.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "i18next": "^23.7.20",
+    "i18next-resources-to-backend": "^1.2.0",
+    "lucide-react": "^0.323.0"
   },
   "devDependencies": {
     "typescript": "^5",
