--- a/package.json
+++ b/package.json
@@ -3,26 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "next-auth": "^4.24.5",
-    "next-i18n-router": "^5.2.0",
-    "next-i18next": "^15.2.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "react-i18next": "^14.0.1",
-    "react-icons": "^5.0.1",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-responsive-carousel": "^3.2.23",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
     "@ant-design/icons": "^5.3.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
@@ -36,17 +22,33 @@
     "clsx": "^2.1.0",
     "i18next": "^23.7.20",
     "i18next-resources-to-backend": "^1.2.0",
-    "lucide-react": "^0.323.0"
+    "lucide-react": "^0.323.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "next-i18n-router": "^5.2.0",
+    "next-i18next": "^15.2.0",
+    "next-intl": "^3.7.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-easy-swipe": "^0.0.23",
+    "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.0.1",
+    "react-icons": "^5.0.1",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-responsive-carousel": "^3.2.23",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
