--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
