--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,12 +19,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "accept-language": "^3.0.18",
     "antd": "^5.14.0",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-dev-https": "^0.13.3",
     "next-intl": "^3.7.0",
     "react": "^18",
     "react-dom": "^18",
