--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://apis.parkx.com/
+NEXT_PUBLIC_API_URL=http://localhost:5066/ #https://apis.parkx.com/
 
 AUTH_SECRET=a6c033a1c26f28cbbc6cd425694a7eaa
 
@@ -8,5 +8,5 @@ AUTH_FACEBOOK_SECRET=
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 
-AUTH_LINE_ID=
-AUTH_LINE_SECRET=
+AUTH_LINE_ID=2003513516
+AUTH_LINE_SECRET=696901d7050d287548096222f40c8afa
