--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_API_URL=https://apis.parkx.com/ #http://localhost:5066/ #https://apis.parkx.com/
-NEXTAUTH_URL = https://dev.parkx.com #https://localhost:3000 #https://parkx.com #https://dev.parkx.com/
+NEXT_PUBLIC_API_URL=https://apis.parkx.com/ #https://localhost:7112// #https://apis.parkx.com/
+NEXTAUTH_URL = https://localhost:3000 #https://localhost:3000 #https://parkx.com #https://dev.parkx.com/
 AUTH_SECRET=a6c033a1c26f28cbbc6cd425694a7eaa
 
 AUTH_FACEBOOK_ID=
@@ -10,3 +10,4 @@ AUTH_GOOGLE_SECRET=
 
 AUTH_LINE_ID=2003513516
 AUTH_LINE_SECRET=696901d7050d287548096222f40c8afa
+
